# atendimento-espe

./: .env.example  .env.services  .gitignore  .mcp.json  COOLIFY_ACCESS.md  Dockerfile  README.md  SETUP.md  docker-compose.services.yml  docker-compose.yml  env.example  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/middleware/: context.py
app/api/routes/: webhook.py
app/database/: __init__.py  supabase.py
app/database/migrations/: 001_initial_schema.sql
app/database/models/: __init__.py  appointment.py  contact.py  conversation.py  message.py  payment.py
app/directives/: compliance_rules.md  emergency_protocol.md  sdr_flow.md
app/execution/queue/: rabbitmq.py  rate_limit.py  redis_lock.py
app/execution/workers/: celery_app.py  crm_sync_worker.py  doctoralia_sync_worker.py  media_worker.py  payments_worker.py
app/integrations/uazapi/: client.py  schemas.py
app/monitoring/: tracing.py
app/orchestrator/: graph.py  idempotency.py  ownership.py  router.py  state.py
app/utils/: __init__.py  dates.py  ids.py  phone.py  validators.py
kestra/flows/: reactivation_30d.yaml  reminders_d1.yaml
scripts/: connect_coolify.bat  coolify_manager.py  init_supabase.sql  setup_coolify.sh
