[project]
name = "clinic-ai"
version = "0.1.0"
description = "Sistema de Atendimento com IA para Clínica ESPE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.3.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-openrouter>=0.1.0",
    "langchain-core>=0.1.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "langfuse>=2.0.0",
    "sentry-sdk>=1.38.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
